# connectivity_and_bcdef

./: .gitignore  CMakeLists.txt  LICENSE  README.dev.md  README.md
BC_define/: CMakeLists.txt  Makefile
BC_define/include/: bc_define_internal.hpp  cgns_cleanup.hpp  common.hpp  connectivity.hpp  connectivity_internal.hpp  connectivity_writer.hpp  k_values.hpp  logger.hpp  mesh_io.hpp  mesh_utils.hpp  plot3d_io.hpp
BC_define/scripts/: compute_k_values.sh
BC_define/scripts/io_bench/: bench_io_k.sh  generate_io_meshes.sh  io_bench  io_bench.cpp  io_mesh_gen  io_mesh_gen.cpp
BC_define/src/: bc_define_bcspec.cpp  bc_define_cgns.cpp  bc_define_helpers.cpp  bc_define_main.cpp  bc_define_plot3d.cpp  bc_dump.cpp  cgns_cleanup.cpp  connectivity_core.cpp  connectivity_face_build.cpp  connectivity_hash.cpp  connectivity_utils.cpp  connectivity_verify.cpp  connectivity_writer.cpp  logger.cpp  mesh_io.cpp  mesh_utils.cpp  plot3d_io.cpp
docs/: algorithm.md  bc_dump.md  cgns_conventions.md  module_map.md  plot3d_formats.md  testing.md  usage.md
linux/: BC_define.Makefile
linux/cmake/: Defaults.cmake
linux/expected/: tests_correct_output_cgns  tests_correct_output_plot3d
linux/io_bench/: bench_io_k.sh  generate_io_meshes.sh
macos/: BC_define.Makefile
macos/cmake/: Defaults.cmake
macos/expected/: tests_correct_output_plot3d
macos/io_bench/: bench_io_k.sh  generate_io_meshes.sh
meshes/: mesh_notes
meshes/cgns/blunt/: bcdef.input_blunt2  blunt3d_1.cgns
meshes/cgns/cube/: bcdef.input_cube1  bcdef.input_cube4
meshes/cgns/omesh/: bcdef.input_b  bcdef.input_o  dmesh_1z.cgns  omesh_1z.cgns
meshes/cgns/rect/: bcdef.input_rect2  bcdef.input_rect3  rect2d_3zones.cgns  rect2d_4zones.cgns
meshes/cgns/skew/: skew3d_6zones.cgns
meshes/cgns/square/: bcdef.input_square1  square2d_ij100.cgns  square2d_z3ijneg.cgns  square2d_z4ineg.cgns
meshes/cgns/tiny/: tiny_square_4z.cgns
meshes/plot3d/blunt/: bcdef.input_blunt1  blunt3d_1.x
meshes/plot3d/cube/: bcdef.input_cube2  bcdef.input_cube3
meshes/plot3d/omesh/: dmesh_1z.x  omesh_1z.x
meshes/plot3d/rect/: bcdef.input_rect1  bcdef.input_rect4  rect2d_3zones.x  rect2d_4zones.x
meshes/plot3d/skew/: bcdef.input_skew1  skew3d_6zones.x
meshes/plot3d/square/: bcdef.input_square2  bcdef.input_square3  square2d_ij100.x  square2d_z3ijneg.x  square2d_z4ineg.x
meshes/plot3d/tiny/: tiny_square_4z.x
test/: run1test.sh  runtests_cgns.sh  runtests_p3d.sh  show1to1.py  tests_correct_output_cgns
